# TORCH

./: .gitignore  README.md  torUML.drawio
Client/: Client.sln
Client/Client/: Aes.cs  App.xaml  App.xaml.cs  ChatMessage.cs  Client.cs  ConversationItem.cs  Helper.cs  MainWindow.xaml  MainWindow.xaml.cs  MenuWindow.xaml  MenuWindow.xaml.cs  Node.cs  Requests.cs  Responses.cs  SignupWindow.xaml  SignupWindow.xaml.cs  TorClient.csproj  UserItem.cs  chatData.cs  x25519.cs
TORch/: docker-compose.yml
TORch/Nodes/Node1/: Dockerfile  Node 1.py  aes.py  ca.crt  router1.crt  router1.key
TORch/Nodes/Node2/: Dockerfile  Node 2.py  router2.crt  router2.key  tor.py
TORch/Nodes/Node3/: Dockerfile  Node 3.py  router3.crt  router3.key
TORch/TorProject2/: CMakeLists.txt  Dockerfile
TORch/TorProject2/TorProject2/: CMakeLists.txt  ChatManager.cpp  ChatManager.h  Communicator.cpp  Communicator.h  GroupChat.cpp  GroupChat.h  Helper.cpp  Helper.h  IDatabase.h  IRequestHandler.h  JsonRequestPacketDeserializer.cpp  JsonRequestPacketDeserializer.h  JsonResponsePacketSerializer.cpp  JsonResponsePacketSerializer.h  LoggedUser.cpp  LoggedUser.h  LoginManager.cpp  LoginManager.h  LoginRequestHandler.cpp  LoginRequestHandler.h  MenuRequestHandler.cpp  MenuRequestHandler.h  Message.h  Request.h  RequestHandlerFactory.cpp  RequestHandlerFactory.h  Response.h  Server.cpp  Server.h  SingleChat.cpp  SingleChat.h  Source.cpp  SqliteDatabase.cpp  SqliteDatabase.h  json.hpp  server.crt  server.key
TORch/pythonClient/: PythonTest.py  fullAes.py
